fixing form on mobiles

--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -21,7 +21,7 @@
 }
 
 .searchBar {
-	width: 31em;
+	width: 30em;
 	border: none;
 	font-size: 1em;
 	border-radius: 5px 0 0 5px;
@@ -31,9 +31,6 @@
 		width: 53%;
 		border-radius: 10px 0 0 10px;
 		box-shadow: none;
-	}
-	@include bp(sm) {
-		width: 18em;
 	}
 }
 
@@ -48,7 +45,8 @@
 	}
 }
 
-.padding_s {
+.searchBar_s,
+.searchButton_s {
 	padding: 1em;
 	border: 1px solid white;
 	@include bp(xs) {
@@ -56,9 +54,21 @@
 	}
 }
 
-.padding_n {
+.searchBar_n,
+.searchButton_n {
 	padding: 2em;
 	@include bp(xs) {
 		padding: 2em 1.6em;
+	}
+}
+
+.searchBar_s {
+	@include bp(sm) {
+		width: 18em;
+	}
+}
+.searchBar_n {
+	@include bp(sm) {
+		width: 30em;
 	}
 }
